RESOLVED FIXED23686
REGRESSION (r40475): Failure in fast/xpath/4XPath/Core/test_core_functions.html
https://bugs.webkit.org/show_bug.cgi?id=23686
Summary REGRESSION (r40475): Failure in fast/xpath/4XPath/Core/test_core_functions.html
mitz
Reported 2009-02-02 10:57:08 PST
After <http://trac.webkit.org/changeset/40475>, fast/xpath/4XPath/Core/test_core_functions.html is failing. See the URL.
Attachments
patch (2.41 KB, patch)
2009-02-02 11:57 PST, Darin Adler
zimmermann: review+
mitz
Comment 1 2009-02-02 10:57:39 PST
Darin Adler
Comment 2 2009-02-02 11:57:54 PST
Nikolas Zimmermann
Comment 3 2009-02-02 12:04:30 PST
Comment on attachment 27251 [details] patch Looks good, r=me.
Darin Adler
Comment 4 2009-02-02 12:11:20 PST
trac.webkit.org/changeset/40484
Note You need to log in before you can comment on or make changes to this bug.